Fix styles on Firefox

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,7 +17,7 @@ body {
   left: -8px;
   right: -8px;
   top: 0;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   box-sizing: border-box;
 }
 
@@ -73,7 +73,7 @@ body {
   .attribution,
   .attribution a {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
     color: #c8c8c8;
     font-size: 13px;
   }
@@ -724,7 +724,7 @@ button:hover:enabled {
     margin-left: 0;
     margin-right: 5px;
     margin-top: 5px;
-    width: 225px;
+    width: 250px;
   }
 
   .button-checkbox {
